@startuml Pattern_MVC

title Design Pattern - Model-View-Controller (MVC) Pattern

' ========== Classic Blue Style (Matching Sequence Diagrams) ==========
skinparam backgroundColor White
skinparam roundcorner 0
skinparam defaultFontName Arial
skinparam defaultFontSize 11

skinparam class {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
    AttributeFontName Arial
    AttributeFontColor Black
    ArrowColor #282828
}

skinparam package {
    BackgroundColor White
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
}

skinparam note {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontName Arial
}

skinparam classAttributeIconSize 0

package "View (JavaFX UI)" {
    class "Login Scene" as LoginScene {
        Username TextField
        Password Field
        Login Button
        Register Button
    }
    
    class "Main Scene" as MainScene {
        Navigation Menu
        Content Area
        Notification Badge
    }
    
    class "Item Detail Scene" as ItemDetailScene {
        Item Image
        Item Info
        Purchase Button
        Favorite Button
    }
}

package "Controller" {
    class LoginController {
        - primaryStage : Stage
        - userService : UserService
        --
        + showLoginView() : void
        + showRegisterView() : void
        - handleLogin() : void
        - handleRegister() : void
    }
    
    class MainController {
        - primaryStage : Stage
        - userService : UserService
        --
        + showMainView() : void
        - showBoardView() : void
        - showMyItemsView() : void
        - checkNewNotifications() : void
    }
    
    class BoardController {
        - itemService : ItemService
        --
        + loadItems() : void
        + searchItems(String) : void
        + filterByCategory(String) : void
    }
}

package "Model" {
    class User {
        - id : Long
        - username : String
        - passwordHash : String
        - email : String
        - role : UserRole
        - active : boolean
    }
    
    class Item {
        - id : Long
        - sellerId : Long
        - title : String
        - description : String
        - price : double
        - category : String
        - active : boolean
    }
    
    class Order {
        - id : Long
        - orderNo : String
        - buyerId : Long
        - sellerId : Long
        - itemId : Long
        - status : String
    }
}

' Relationships
LoginScene <.. LoginController : displays
MainScene <.. MainController : displays
ItemDetailScene <.. BoardController : displays

LoginController --> User : uses
MainController --> User : uses
BoardController --> Item : uses
BoardController --> Order : creates

note right of LoginController
  Controller handles:
  - User input
  - Updates Model
  - Updates View
end note

note bottom of User
  Model stores:
  - Application data
  - Business state
end note

note left of LoginScene
  View handles:
  - Display UI
  - User interaction
end note

@enduml

